update env exemple

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,15 +1,39 @@
+# -----------------------------------------------------------------------------
 # Next.js
-
+# -----------------------------------------------------------------------------
+NEXTAUTH_SECRET=
 NEXT_PUBLIC_APP_URL=
 
+# -----------------------------------------------------------------------------
 # API - Games
-
+# -----------------------------------------------------------------------------
 API_KEY=
-
 API_HOST=
-
 API_URL=
 
+# -----------------------------------------------------------------------------
 # API - Images
-
+# -----------------------------------------------------------------------------
 API_IMAGES_URL=
+
+# -----------------------------------------------------------------------------
+# GitHub oAuth
+# -----------------------------------------------------------------------------
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+# -----------------------------------------------------------------------------
+# Google oAuth
+# -----------------------------------------------------------------------------
+GOOGLE_ID=
+GOOGLE_SECRET=
+
+# -----------------------------------------------------------------------------
+# DB
+# -----------------------------------------------------------------------------
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
+DATABASE_URL=
