env exemple update

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,21 +1,37 @@
-NODE_ENV=
+NODE_ENV=development
+
+# -----------------------------------------------------------------------------
+# DB
+# -----------------------------------------------------------------------------
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
+
+# -----------------------------------------------------------------------------
+# Server
+# -----------------------------------------------------------------------------
+SERVER_PORT=3000
+
 # -----------------------------------------------------------------------------
 # Next.js
 # -----------------------------------------------------------------------------
 NEXTAUTH_SECRET=
-NEXT_PUBLIC_APP_URL=
+NEXT_PUBLIC_APP_URL=http://localhost:${SERVER_PORT}
 
 # -----------------------------------------------------------------------------
 # API - Games
 # -----------------------------------------------------------------------------
 API_KEY=
-API_HOST=
-API_URL=
+API_HOST=opencritic-api.p.rapidapi.com
+API_URL=https://opencritic-api.p.rapidapi.com
 
 # -----------------------------------------------------------------------------
 # API - Images
 # -----------------------------------------------------------------------------
-API_IMAGES_URL=
+API_IMAGES_URL=https://img.opencritic.com
 
 # -----------------------------------------------------------------------------
 # GitHub oAuth
@@ -28,13 +44,3 @@ GITHUB_CLIENT_SECRET=
 # -----------------------------------------------------------------------------
 GOOGLE_ID=
 GOOGLE_SECRET=
-
-# -----------------------------------------------------------------------------
-# DB
-# -----------------------------------------------------------------------------
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_PORT=
-DATABASE_URL=
