--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "clsx": "^2.0.0",
     "color-thief-react": "^2.1.0",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
+    "eslint-config-next": "^13.4.12",
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
     "next-auth": "4.20.1",
@@ -36,6 +36,11 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "ts-node": "^10.9.1"
   },
   "prisma": {
