--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@legendapp/state": "^1.4.0",
@@ -36,6 +38,13 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/react": "18.0.28",
+    "@types/testing-library__jest-dom": "5.14.5",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
