--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
     "next-auth": "4.20.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.26",
     "prisma": "^5.0.0",
     "react": "18.2.0",
@@ -43,11 +44,11 @@
     "@testing-library/user-event": "14.4.3",
     "@types/react": "18.0.28",
     "@types/testing-library__jest-dom": "5.14.5",
-    "jest": "29.5.0",
-    "jest-environment-jsdom": "29.5.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "ts-node": "^10.9.1"
